Fixed conf alignment

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -162,13 +162,11 @@ a
   &.send_history .load_more_msg
     text-align: center
     padding: 10px
-    // .pri-cta:nth-of-type(1)
-    //   align-self: flex-start
-    //   color: red
-    //
-    // .pri-cta:nth-of-type(2)
-    //   align-self: flex-end
-    //   color: blue
+
+  &.send_confirmation .success
+    padding-top: 180px  
+    text-align: center
+
 
 /*
   General buttons
